--- a/Catinder.xcodeproj/xcshareddata/xcschemes/Catinder.xcscheme
+++ b/Catinder.xcodeproj/xcshareddata/xcschemes/Catinder.xcscheme
@@ -52,6 +52,17 @@
                ReferencedContainer = "container:Catinder.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "7BC3987D2CF75BA00058C261"
+               BuildableName = "Task1Tests.xctest"
+               BlueprintName = "Task1Tests"
+               ReferencedContainer = "container:Catinder.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
